new files and basic title frame

--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -1,1 +1,14 @@
-<h1> Landing Page </h1>
+{% include "header.html" %}
+
+<div class="title-divs title-screen">
+	<div class="background-smolder"></div>
+	<div class="title-container">
+		<h1 class="main-title"> Voyager Consulting </h1>
+		<h2 class="sub-title"> Impact Driven </h2>
+	</div>
+</div>
+<div class="title-divs">second div</div>
+<div class="title-divs">third div</div>
+<div class="title-divs">fourth div</div>
+
+{% include "footer.html" %}
