--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -1,3 +1,15 @@
+body {
+	background-color: black;
+}
+
+.white {
+	color: white;
+}
+
+.black {
+	color: black !important;
+}
+
 .background-smolder {
 	background-color: black;
 	position: absolute;
@@ -6,9 +18,150 @@
 	opacity: 0.5;
 }
 
+.company {
+	height: 250px;
+	width: 250px;
+	/*border: 2px solid black;*/
+	margin: 10px;
+	display: inline-block;
+	background-size: cover;
+}
+
+.company-overlay {
+	background-color: black;
+	height: 100%;
+	width: 100%;
+	opacity: 0.3;
+}
+
+.company-container {
+	width: 100%;
+	text-align: center;
+}
+.about-selector {
+	border: 3px solid white;
+	width: 45%;
+	font-size: 20px;
+	height: 30px;
+	display: inline-block;
+	text-align: center;
+	border-radius: 5px;
+	margin-left: 2%;
+	margin-right: 2%;
+	color: white;
+	line-height: 30px;
+}
+
+.paragraph {
+	/*color: white;*/
+	margin-bottom: 60px;
+	font-size: 20px;
+}
+
+.mission-title {
+	color: white;
+	text-align: center;
+	margin-top: 40px;
+}
+
+.line-break {
+	width: 100%;
+	height: 1px;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	background-color: white;
+}
+
+.display-picture {
+	position: relative;
+	height: 450px;
+	width: 100%;
+	background-color: black;
+	background-image: url("../images/team.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 0 30%;
+}
+
+.about-launch {
+	width: 100%;
+	background-color: black;
+	position: relative;
+}
+
+.about-alumni {
+	background-color: white;
+}
+
 .main-title {
 	color: white;
 	font-size: 500%;
+}
+
+.navbar {
+	width: 100%;
+	height: 50px;
+	position: fixed;
+	background-color: black;
+	z-index: 1;
+}
+
+.navbar-container {
+	width: 88%;
+	position: relative;
+	margin: 0 auto;
+}
+
+.page-container {
+	width: 80%;
+	position: relative;
+	overflow: auto;
+	margin: 0 auto;
+}
+
+.selector-organizer {
+	width: 100%;
+	text-align: center;
+}
+
+.page-title {
+	position: relative;
+	color: white;
+	font-size: 400%;	
+	margin-top: 20px;
+}
+
+.navbar-logo {
+	float: left;
+	width: 200px;
+	height: 40px;
+	margin-top: 5px;
+	margin-left: 15px;
+	margin-bottom: 5px;
+	position: relative;
+	background-image: url("../images/VClogo.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+.navbar-selectors {
+	position: absolute;
+	right: 0;
+	width: 600px;
+	text-align: center;
+	height: 50px;
+	background-color: black;
+}
+
+.navbar-selector {
+	margin-left: 10px;
+	margin-right: 10px;
+	font-weight: bold;
+	height: 50px;
+	line-height: 50px;
+	color: white;
+	display: inline-block;
+
 }
 
 .sub-title {
@@ -31,8 +184,24 @@
 	top: 0; left: 0; bottom: 0; right: 0;
 }
 
+.relative-wrapper {
+	position: relative;
+}
+
 .title-screen {
 	background-color: black;
 	background-image: url("../images/screen1.jpeg");
 	background-size: cover;
+}
+
+.goldman {
+	background-image: url("../images/goldman-sachs.png");
+}
+
+.bain {
+	background-image: url("../images/bain.jpg");
+}
+
+.morgan {
+	background-image: url("../images/morgan-stanley.png");
 }
