--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -1,6 +1,6 @@
 {% include "header.html" %}
 <body>
-	<div class="display-picture"></div>
+	<div class="picture about-picture"></div>
 	<div class="about-launch">
 		<div class="page-container">
 			<div class="about-wrapper">
