--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -1,4 +1,6 @@
 {% include "header.html" %}
+<meta name="title" content="#navbar-about">
+
 <body>
 	<div class="picture about-picture"></div>
 	<div class="about-launch">
