--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -1,4 +1,5 @@
 {% include "header.html" %}
+<meta name="title" content="#navbar-home">
 
 <div class="title-divs title-screen">
 	<div class="background-smolder"></div>
