--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -8,7 +8,23 @@
 		<h2 class="sub-title"> Impact Driven </h2>
 	</div>
 </div>
-<div class="title-divs">second div</div>
+<div id="instagram-container"></div>
+
+<script type="text/template" id="instagram-template">
+	{% include "carousel/instagram.html" %}
+</script>
+<script type="text/template" id="pinterest-template">
+	{% include "carousel/pinterest.html" %}
+</script>
+<script type="text/template" id="amazon-template">
+	{% include "carousel/amazon.html" %}
+</script>
+<script type="text/template" id="valve-template">
+	{% include "carousel/valve.html" %}
+</script>
+
+
+
 <div class="title-divs">third div</div>
 <div class="title-divs">fourth div</div>
 
