--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -10,6 +10,30 @@
 </div>
 <div id="instagram-container"></div>
 
+
+
+
+<div class="title-divs">
+	<div class="picture-frame">
+		<div class="member-picture crystal-picture"></div>
+		<div class="member-picture ted-picture"></div>
+		<div class="member-picture savan-picture"></div>
+		<div class="member-picture robbie-picture"></div>
+		<div class="member-picture natalie-picture"></div>
+		<div class="member-picture felix-picture"></div>
+		<div class="member-picture margarita-picture"></div>
+		<div class="member-picture olivia-picture"></div>
+		<div class="member-picture sumedh-picture"></div>
+	</div>
+	<div class="text-frame"></div>
+</div>
+
+<div class="title-divs">fourth div</div>
+
+
+
+
+
 <script type="text/template" id="instagram-template">
 	{% include "carousel/instagram.html" %}
 </script>
@@ -24,8 +48,5 @@
 </script>
 
 
-
-<div class="title-divs">third div</div>
-<div class="title-divs">fourth div</div>
 
 {% include "footer.html" %}
