--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -8,8 +8,13 @@
 		<h2 class="sub-title"> Impact Driven </h2>
 	</div>
 </div>
-<div id="instagram-container"></div>
 
+<div class="title-divs carousel-display">
+	<div class="carousel-divs current-carousel"></div>
+</div>
+<!-- <div id="carousel-display">
+	<div id="instagram-container"></div>
+</div> -->
 
 
 
