--- a/voyager/templates/header/navbar.html
+++ b/voyager/templates/header/navbar.html
@@ -1,4 +1,10 @@
+
 <div class="navbar">
+	<div class="navbar-span-list">
+		<div class="lines lines-top"></div>
+		<div class="lines"></div>
+		<div class="lines"></div>
+	</div>
 	<div class="navbar-container">
 		<div class="navbar-logo"></div>
 		<div class="navbar-selectors">
