fixed rapid view generation on button mashing for arrows

--- a/voyager/templates/carousel/instagram.html
+++ b/voyager/templates/carousel/instagram.html
@@ -8,6 +8,9 @@
 	</div>
 	<div class="carousel-container">
 		<h1 class="main-title"> Instagram </h1>
+<!-- 		<div class="title-logo">
+			<div class="instagram-logo"></div>
+		</div> -->
 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
 		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2>
 	</div>
