--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -252,6 +252,25 @@ body {
 	font-size: 500%;
 }
 
+.title-logo {
+	position: relative;
+	background-color: white;
+	width: 500px;
+	height: 100px;
+	margin: 0 auto;
+	margin-bottom: 30px;
+}
+
+.instagram-logo {
+	position: absolute;
+	max-height: 100%;
+	max-width: 100%;
+	content: url("../images/instagram-logo.png");
+	margin: 0 auto;
+	left: 0; right: 0;
+}
+
+
 .navbar {
 	/*width: 12%;*/
 	/*height: 100%;*/
