--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -17,24 +17,51 @@
 </div> -->
 
 
-
-<div class="title-divs">
+<!-- Maybe have JavaScript render this instead of having it
+done in the HTML as so -->
+<div class="title-divs member-display">
 	<div class="picture-frame">
-		<div class="member-picture crystal-picture"></div>
-		<div class="member-picture ted-picture"></div>
-		<div class="member-picture savan-picture"></div>
-		<div class="member-picture robbie-picture"></div>
-		<div class="member-picture natalie-picture"></div>
-		<div class="member-picture felix-picture"></div>
-		<div class="member-picture margarita-picture"></div>
-		<div class="member-picture olivia-picture"></div>
-		<div class="member-picture sumedh-picture"></div>
+		<div class="grid-picture crystal-picture"></div>
+		<div class="grid-picture ted-picture"></div>
+		<div class="grid-picture savan-picture"></div>
+		<div class="grid-picture robbie-picture"></div>
+		<div class="grid-picture natalie-picture"></div>
+		<div class="grid-picture felix-picture"></div>
+		<div class="grid-picture margarita-picture"></div>
+		<div class="grid-picture olivia-picture"></div>
+		<div class="grid-picture sumedh-picture"></div>
 	</div>
-	<div class="text-frame"></div>
+ 	<div class="text-frame">
+ 		<h1> Our Members </h1>
+ 		<h3> some lines of text describing how our members are so cool </h3>
+	</div> 
 </div>
 
-<div class="title-divs">fourth div</div>
-<div class="title-divs">fifth div</div>
+<div class="title-divs member-display">
+	<div class="logo-frame">
+		<div class="grid-picture float-right mckinsey-picture"></div>
+		<div class="grid-picture float-right deloitte-picture"></div>
+		<div class="grid-picture float-right bain-picture"></div>
+		<div class="grid-picture float-right goldman-picture"></div>
+		<div class="grid-picture float-right blackrock-picture"></div>
+		<div class="grid-picture float-right credit-picture"></div>
+		<div class="grid-picture float-right surveymonkey-picture"></div>
+		<div class="grid-picture float-right google-picture"></div>
+		<div class="grid-picture float-right apple-picture"></div>
+	</div>
+ 	<div class="text-frame-logo">
+ 		<h1> Our Companies </h1>
+ 		<h3> some lines of text describing how our members are able to make it to these prestigious companies </h3>
+	</div> 
+</div>
+
+
+<div class="title-divs redirect-display">
+	<div class="redirect-box redirect-topleft">Clients</div>
+	<div class="redirect-box redirect-topright">History</div>
+	<div class="redirect-box redirect-bottomleft">Social</div>
+	<div class="redirect-box redirect-bottomright">Not sure what label works</div>
+</div>
 
 
 
