added side navigation

--- a/voyager/templates/header/navbar.html
+++ b/voyager/templates/header/navbar.html
@@ -18,3 +18,11 @@
 		</div>
 	</div>
 </div>
+
+<div class="side-navigation">
+	<div id="side-home" class="selector"></div>
+	<div id="side-clients" class="selector"></div>
+	<div id="side-members" class="selector"></div>
+	<div id="side-business" class="selector"></div>
+	<div id="side-redirect" class="selector"></div>
+</div>
