--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -290,6 +290,33 @@ body {
 	overflow: hidden;
 }
 
+.side-navigation {
+	z-index: 2;
+	position: fixed;
+	/*background-color: black;*/
+	margin: auto;
+	right: 20; top: 0; bottom: 0;
+	height: 220px;
+	width: 20px;
+}
+
+.selector {
+	height: 8px;
+	width: 8px;
+	border-radius: 4px;
+	background-color: gray;
+	margin: auto;
+	left: 0; right: 0;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	cursor: pointer;
+}
+
+.selector:hover {
+	background-color: white !important;
+}
+
+
 .lines {
 	position: relative;
 	width: 40%;
@@ -397,7 +424,7 @@ body {
 	position: relative;
 	height: 100%;
 	width: 100%;
-	border: 2px solid black;
+	/*border: 2px solid black;*/
 	background-color: white;
 	overflow: hidden;
 }
