small navbar bug

--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -1,6 +1,14 @@
 {% include "header.html" %}
 <meta name="title" content="#navbar-home">
 
+<div class="side-navigation">
+	<div id="side-home" class="selector"></div>
+	<div id="side-clients" class="selector"></div>
+	<div id="side-members" class="selector"></div>
+	<div id="side-business" class="selector"></div>
+	<div id="side-redirect" class="selector"></div>
+</div>
+
 <div class="title-divs title-screen">
 	<div class="background-smolder"></div>
 	<div class="title-container">
