about page completion, footer added

--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -26,6 +26,23 @@
 	background-image: url("../images/members/sumedh.jpg");
 }
 
+.sanchit-picture {
+	background-image: url("../images/members/sanchit.jpg");
+}
+
+.gwin-picture {
+	background-image: url("../images/members/gwin.jpg");
+}
+
+.ajay-picture {
+	background-image: url("../images/members/ajay.jpg");
+}
+
+
+.philmon-picture {
+	background-image: url("../images/members/philmon.jpg");
+}
+
 .robbie-picture {
 	background-image: url("../images/members/robbie.jpg");
 }
@@ -65,6 +82,44 @@
 .google-picture {
 	background-image: url("../images/google-logo.png")
 }
+
+.kkr-picture {
+	background-image: url("../images/kkr-logo.png")
+}
+
+.ebay-picture {
+	background-image: url("../images/ebay-logo.png")
+}
+
+.accenture-picture {
+	background-image: url("../images/accenture-logo.png")
+}
+
+.pwc-picture {
+	background-image: url("../images/pwc-logo.png")
+}
+
+.microsoft-picture {
+	background-image: url("../images/microsoft-logo.jpg")
+}
+
+.linkedin-picture {
+	background-image: url("../images/linkedin-logo.png")
+}
+
+.acrobat-picture {
+	background-image: url("../images/adobe-logo.png")
+}
+
+.intel-picture {
+	background-image: url("../images/intel-logo.png")
+}
+
+.facebook-picture {
+	background-image: url("../images/facebook-logo.png")
+}
+
+
 
 .surveymonkey-picture {
 	background-image: url("../images/surveymonkey.png")
