--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -17,7 +17,8 @@ body {
 .footer-wrapper {
 	/*position: relative;*/
 	width: 100%;
-	height: 200px;
+	/*height: 200px;*/
+	overflow: auto;
 	background-color: #303030;
 }
 
@@ -26,6 +27,7 @@ body {
 	margin: 0 auto;
 	width: 80%;
 	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .follow-row {
