--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -65,10 +65,30 @@ done in the HTML as so -->
 
 
 <div class="title-divs redirect-display">
-	<div class="redirect-box redirect-topleft">Clients</div>
+	<div class="six columns redirect-box">
+		<div class="redirect-title">
+			<h3> Clients </h3>
+		</div>
+	</div>
+	<div class="six columns redirect-box">
+		<div class="redirect-title">
+			<h3> History </h3>
+		</div>
+	</div>
+	<div class="six columns redirect-box">
+		<div class="redirect-title">
+			<h3> Apply </h3>
+		</div>
+	</div>
+	<div class="six columns redirect-box">
+		<div class="redirect-title">
+			<h3> Team </h3>
+		</div>
+	</div>
+<!-- 	<div class="redirect-box redirect-topleft">Clients</div>
 	<div class="redirect-box redirect-topright">History</div>
 	<div class="redirect-box redirect-bottomleft">Social</div>
-	<div class="redirect-box redirect-bottomright">Not sure what label works</div>
+	<div class="redirect-box redirect-bottomright">Not sure what label works</div> -->
 </div>
 
 
