--- a/voyager/templates/careers.html
+++ b/voyager/templates/careers.html
@@ -3,36 +3,28 @@
 
 <body>
 	<div class="picture career-picture"></div>
-	<div class="picture-text-overlay">
+
+<!-- 	<div class="picture-text-overlay">
 		<p>
 		"Voyager prides itself on its unparalleled professional development which has allowed members to enter a diverse group of prestigious organizations. Members leverage their experiences and connections from Voyager to land positions at leading institutions in management consulting, investment banking, and technology."
 		</p>
-	</div>
+	</div> -->
 	<div class="career-launch">
 		<div class="page-container">
 			<h2 class="page-title"> Careers </h2>
 			<div class="line-break career-line-break"></div>
-			<div class="about-selector">2015</div>
-			<div class="about-selector">2014</div>
-			<div class="career-whitespace"></div>
+			<!-- <div class="about-selector">2015</div> -->
+			<!-- <div class="about-selector">2014</div> -->
+			<!-- <div class="career-whitespace"></div> -->
 			<h3 class="page-title subtitle"> Full Time & Internships </h3>
-			<table class="u-full-width table-style">
-				<tr>
-					<th> Name </th>
-					<th> Company </th>
-					<th> Position </th>
-					<th> Location </th>
-				</tr>
-				<tr>
-					<td> Rohit Gupta </td>
-					<td> Credit Suisse </td>
-					<td> Investment Banking Analyst Intern - Technology </td>
-					<td> San Francisco, CA </td>
-				</tr>
-			</table>
+			<h4> 2015 </h4>
+			<div id="table-container"></div>
 			<div class="whitespace"></div>
 		</div>
 	</div>
+	<script type="text/template" id="table-template">
+		{% include "table.html" %}
+	</script>
 </body>
 
 
