--- a/voyager/templates/carousel/amazon.html
+++ b/voyager/templates/carousel/amazon.html
@@ -8,7 +8,9 @@
 	</div>
 	<div class="carousel-container">
 		<h1 class="main-title"> Amazon </h1>
-		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
-		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2>
+		<p class="sub-title"> First line of text that is only used for filler purposes <br>
+			Second line of text that is only used for filler purposes </p>
+<!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
+		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
 	</div>
 </div>
