--- a/voyager/templates/carousel/instagram.html
+++ b/voyager/templates/carousel/instagram.html
@@ -11,7 +11,9 @@
 <!-- 		<div class="title-logo">
 			<div class="instagram-logo"></div>
 		</div> -->
-		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
-		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2>
+		<p class="sub-title"> First line of text that is only used for filler purposes <br>
+			Second line of text that is only used for filler purposes </p>
+<!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
+		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
 	</div>
 </div>
