--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:300);
+
 body {
 	background-color: white;
 	font-family: 'Cabin', sans-serif;
@@ -564,6 +566,8 @@ body {
 
 .sub-title {
 	color: white;
+	font-family: 'Lato', sans-serif;
+	font-size: 200%;
 }
 
 .title-divs {
