--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -47,15 +47,22 @@ done in the HTML as so -->
 
 <div class="title-divs member-display">
 	<div class="logo-frame">
-		<div class="grid-picture float-right mckinsey-picture"></div>
-		<div class="grid-picture float-right deloitte-picture"></div>
-		<div class="grid-picture float-right bain-picture"></div>
-		<div class="grid-picture float-right goldman-picture"></div>
-		<div class="grid-picture float-right blackrock-picture"></div>
-		<div class="grid-picture float-right credit-picture"></div>
-		<div class="grid-picture float-right surveymonkey-picture"></div>
-		<div class="grid-picture float-right google-picture"></div>
-		<div class="grid-picture float-right apple-picture"></div>
+		<div class="grid-member-picture mckinsey-picture"></div>
+		<div class="grid-member-picture deloitte-picture"></div>
+		<div class="grid-member-picture bain-picture"></div>
+		<div class="grid-member-picture goldman-picture"></div>
+		<div class="grid-member-picture blackrock-picture"></div>
+		<div class="grid-member-picture credit-picture"></div>
+		<div class="grid-member-picture surveymonkey-picture"></div>
+		<div class="grid-member-picture google-picture"></div>
+		<div class="grid-member-picture ebay-picture"></div>
+		<div class="grid-member-picture pwc-picture"></div>
+		<div class="grid-member-picture microsoft-picture"></div>
+		<div class="grid-member-picture apple-picture"></div>
+		<div class="grid-member-picture acrobat-picture"></div>
+		<div class="grid-member-picture linkedin-picture"></div>
+		<div class="grid-member-picture accenture-picture"></div>
+		<div class="grid-member-picture intel-picture"></div>
 	</div>
  	<div class="text-frame-logo">
  		<h1> Our Companies </h1>
