--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -40,8 +40,10 @@ done in the HTML as so -->
 		<div class="grid-picture sumedh-picture"></div>
 	</div>
  	<div class="text-frame">
- 		<h1> Our Members </h1>
- 		<h3> some lines of text describing how our members are so cool </h3>
+ 		<div class="text-wrapper">
+	 		<h1> Our Members </h1>
+	 		<h3> some lines of text describing how our members are so cool </h3>
+	 	</div>
 	</div> 
 </div>
 
