--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -75,23 +75,23 @@ done in the HTML as so -->
 
 <div class="title-divs redirect-display">
 	<div class="six columns redirect-box">
-		<div class="redirect-title">
-			<h3> Clients </h3>
+		<div class="redirect-title-box">
+			<h3 class="redirect-title"> Clients </h3>
 		</div>
 	</div>
 	<div class="six columns redirect-box">
-		<div class="redirect-title">
-			<h3> History </h3>
+		<div class="redirect-title-box">
+			<h3 class="redirect-title"> History </h3>
 		</div>
 	</div>
 	<div class="six columns redirect-box">
-		<div class="redirect-title">
-			<h3> Apply </h3>
+		<div class="redirect-title-box">
+			<h3 class="redirect-title"> Apply </h3>
 		</div>
 	</div>
 	<div class="six columns redirect-box">
-		<div class="redirect-title">
-			<h3> Team </h3>
+		<div class="redirect-title-box">
+			<h3 class="redirect-title"> Team </h3>
 		</div>
 	</div>
 <!-- 	<div class="redirect-box redirect-topleft">Clients</div>
