--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -42,7 +42,7 @@ done in the HTML as so -->
  	<div class="text-frame">
  		<div class="text-wrapper">
 	 		<h1> Our Members </h1>
-	 		<h3> some lines of text describing how our members are so cool </h3>
+	 		<p class="sub-title"> some lines of text describing how our members are so cool </p>
 	 	</div>
 	</div> 
 </div>
@@ -59,16 +59,16 @@ done in the HTML as so -->
 		<div class="grid-member-picture google-picture"></div>
 		<div class="grid-member-picture ebay-picture"></div>
 		<div class="grid-member-picture pwc-picture"></div>
-		<div class="grid-member-picture microsoft-picture"></div>
 		<div class="grid-member-picture apple-picture"></div>
+		<div class="grid-member-picture intel-picture"></div>
 		<div class="grid-member-picture acrobat-picture"></div>
 		<div class="grid-member-picture linkedin-picture"></div>
 		<div class="grid-member-picture accenture-picture"></div>
-		<div class="grid-member-picture intel-picture"></div>
+		<div class="grid-member-picture microsoft-picture"></div>
 	</div>
  	<div class="text-frame-logo">
  		<h1> Our Companies </h1>
- 		<h3> some lines of text describing how our members are able to make it to these prestigious companies </h3>
+ 		<p class="sub-title table-style"> some lines of text describing how our members are able to make it to these prestigious companies </p>
 	</div> 
 </div>
 
