--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -190,6 +190,8 @@ body {
 	text-align: center;
 }
 
+.
+
 .pl-picture-box {
 	position: relative;
 	height: 350px;
@@ -274,7 +276,7 @@ body {
 .picture-frame {
 	width: 56%;
 	height: 100%;
-	background-color: gray;
+	background-color: #404040;
 	position: absolute;
 	z-index: 1;
 	/*overflow: hidden;*/
@@ -282,11 +284,11 @@ body {
 }
 
 .logo-frame {
-	width: 56%;
-	height: 100%;
+	width: 100%;
+	height: 25%;
 	background-color: gray;
 	position: absolute;
-	right: 0;
+	bottom: 0;
 }
 
 
@@ -299,7 +301,7 @@ body {
 	/*border: 2px solid white;*/
 	/*width: 44%;*/
 	text-align: center;
-	background-color: gray;
+	background-color: #404040;
 	position: absolute;
 	color: white;
 	margin: auto;
@@ -311,12 +313,13 @@ body {
 	/*height: 220px;*/
 	/*guiding lines to see placement*/
 	/*border: 2px solid white;*/
-	width: 44%;
+	width: 100%;
+	/*height: 50%;*/
 	text-align: center;
-	background-color: gray;
+	background-color: #404040;
 	position: absolute;
 	color: white;
-	left: 0; top: 0; bottom: 0;
+	top: 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -325,7 +328,7 @@ body {
 }
 
 .member-display {
-	background-color: gray !important;
+	background-color: #404040 !important;
 }
 
 .grid-picture {
@@ -525,10 +528,10 @@ body {
 	margin-top: 20px;
 }
 
-.subtitle {
+/*.subtitle {
 	font-size: 300%;
 }
-
+*/
 .navbar-logo {
 	/*float: left;*/
 	max-width: 160px;
