--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -30,7 +30,8 @@
 			<h2 class="page-title"> Leadership </h2>
 			<div class="line-break"></div>
 			<!-- <h3 class="mission-title"> Executives </h3> -->
-			<div class="executive-member">
+			<div class="executive-box"></div>
+<!-- 			<div class="executive-member">
 				<div class="executive-picture savan-picture"></div>
 				<div class="executive-text">
 					<h3> President - Savan Patel </h3>
@@ -74,7 +75,7 @@
 						Philmon is a third year double-majoring in Business Administration and Economics. Philmon joined Voyager during his freshman year and started as a consultant in the Box team. This past summer, he interned McKinsey & Company as a Business Analyst. He also currently sits on the International Board of Directors for YCAB Foundation, an Indonesian-based social enterprise that focuses on microfinance. During his free time, he enjoys playing basketball and watching the English Premier League.
 					</p>
 				</div>
-			</div>
+			</div> -->
 			<h3> Project Leaders </h3>
 			<div class="pl-members">
 				<div class="pl-picture-box">
